css/style.css
html,
body {
	z-index: -4;
	margin: 0;
    text-align: center;
    letter-spacing: 0.03em;
    display: flex;
	flex-wrap: wrap;
	color: #ffce87;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    background-image: url('../images/body-bkg.jpg'); 
	background-size: cover;
	background-position: 50% 50%;
	background-repeat: no-repeat;
}

canvas {
	display: block;
	overflow: hidden;
}

/*
___________________________________________________
TITLE SCREEN STYLING */

.title-overlay {
	visibility: visible;
	opacity: 1;
	position: fixed;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	background: linear-gradient(#161616, #050505);
	transition: all 0.6s ease;
}

.title-container {
	visibility: hidden;
	opacity: 0;
	position: absolute;
	margin: auto;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	width: 480px;
	height: 320px;
	text-align: center;
	transition: all 0.3s ease;
}

.title-bkg {
	z-index: -1;
	position: absolute;
	margin: auto;
	top: 20px;
	right: 40px;
	bottom: 0;
	background-image: url('../images/popup-bkg.png');
	background-size: 480px;
	background-position: 50% 50%;
	background-repeat: no-repeat;
	width: 480px;
	height: 300px;
	transition: all 0.3s ease;
	
}

.title-image {
	margin: auto;
	position: absolute;
	top: 0;
	bottom: 10px;
	right: 0;
	width: 130px;
	height: 260px;
	transition: all 0.3s ease;
}

.title-type {
	margin: auto;
	position: absolute;
	top: 10px;
	bottom: 90px;
	left: 30px;
	width: 320px;
	height: 40px;
	transition: all 0.3s ease;
}

.instructions {
	position: absolute;
	margin: auto;
	top: 40px;
	left: 35px;
	bottom: 0;
	width: 320px;
	height: 60px;
	font-size: 0.85em;
	line-height: 1.4em;
}

.start {
	position: absolute;
	margin: auto;
	top: 175px;
	left: 30px;
	bottom: 0;
	width: 320px;
	height: 60px;
	font-size: 1.5em;
	cursor: pointer;
	-webkit-tap-highlight-color: transparent;
	transition: all 0.3s ease;
}

.start:hover {
	color: white;
}

/*
___________________________________________________
GAME OVER SCREEN STYLING */

.overlay {
	visibility: hidden;
	opacity: 0;
	position: fixed;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	background: rgba(0, 0, 0, 0.8);
	transition: all 0.3s ease;
}

.popup {
	position: absolute;
	margin: auto;
	top: 0;
	left: 0;
	bottom: 10%;
	width: 100%;
	height: 360px;
	text-align: center;
	background-image: url('../images/popup-bkg.png');
	background-size: 500px;
	background-position: 50% 50%;
	background-repeat: no-repeat;
	transition: all 0.3s ease;
}

.overlay-image {
	opacity: 0;
	margin-top: 10%;
	width: 200px;
	height: 200px;
	transition: all 0.3s ease;
}

.play-again {
	margin: 0;
	cursor: pointer;
	-webkit-tap-highlight-color: transparent;
	transition: all 0.3s ease;
}

.play-again:hover {
	color: white;
}

.end {
	z-index: -2;
	opacity: 0;
	position: absolute;
	width: 100%;
	height: 100%;
	border-radius: 10px;
	background-image: url('../images/end-bkg.jpg');
	background-size: cover;
	background-position: 50% 50%;
	background-repeat: no-repeat;
	transition: all 0.3s ease;
}

.msg {
	margin-top: 0;
	margin-bottom: 0;
}

/*
___________________________________________________
GAME WINDOW STYLING */

.container {
	z-index: -3;
	position: absolute;
	margin: auto;
	top: 0;
	left: 0;
	right: 0;
	width: 320px;
	height: 320px;
	border-radius: 10px;
	background-image: url('../images/bkg.jpg');
	background-size: cover;
	background-position: 50% 50%;
	background-repeat: no-repeat;
	opacity: 0;
	box-shadow: 0 10px 50px black;
	transition: all 0.3s ease;
}

.level {
	font-size: 1.2em;
	line-height: 0;
	text-align: center;
	position: absolute;
	right: 2em;
	bottom: 0.5em;
}

/*
___________________________________________________
CONTROL PAD STYLING */

.control-pad {
	z-index: -1;
	margin: auto;
	width: 225px;
	height: 225px;
	position: absolute;
	left: 0;
	right: 0;
	bottom: 0;
	transition: all 0.3s ease;
}

.up {
	position: absolute;
	top: 25px;
	left: 75px;
	width: 75px;
	height: 75px;
	background-image: url('../images/up.png');
	background-size: cover;
	cursor: pointer;
	-webkit-tap-highlight-color: transparent;
}

.right {
	position: absolute;
	top: 75px;
	right: 25px;
	width: 75px;
	height: 75px;
	background-image: url('../images/right.png');
	background-size: cover;
	cursor: pointer;
	-webkit-tap-highlight-color: transparent;
}

.left {
	position: absolute;
	top: 75px;
	left: 25px;
	width: 75px;
	height: 75px;
	background-image: url('../images/left.png');
	background-size: cover;
	cursor: pointer;
	-webkit-tap-highlight-color: transparent;
}

.down {
	position: absolute;
	bottom: 25px;
	right: 75px;
	width: 75px;
	height: 75px;
	background-image: url('../images/down.png');
	background-size: cover;
	cursor: pointer;
	-webkit-tap-highlight-color: transparent;
}

/*
___________________________________________________
LANDSCAPE STYLING FOR PHONE & TABLET */

@media screen and (orientation: landscape) {

	@media screen and (max-height: 480px) {

		.container {
			top: 0;
			bottom: 0;
			right: auto;
			float: left;
			width: 320px;
			height: 320px;
			transition: all 0.3s ease;
		}

		.popup {
			bottom: 0;
		}

		.control-pad {
			top: 0;
			bottom: 0;
			left: 55%;
			transition: all 0.3s ease;
		}
	}

	@media screen and (min-width: 569px) {

		.container {
			top: 0;
			bottom: 0;
			right: auto;
			left: 8%;
			width: 320px;
			height: 320px;
			transition: all 0.3s ease;
		}
	}	

	@media screen and (min-width: 853px) {

		.control-pad {
			top: 450px;
			bottom: 0;
			left: 0;
			right: 550px;
			transition: all 0.3s ease;
		}
	}
}

/*
___________________________________________________
PORTRAIT STYLING FOR PHONE & TABLET */

@media screen and (orientation: portrait) and (min-height: 569px) {

	.container {
		top: 10%;
		right: 0;
		left: 0;
		width: 320px;
		height: 320px;
		transition: all 0.3s ease;
	}
}

@media screen and (orientation: portrait) and (max-width: 480px) {

	.title-container {
		width: 100%;
	}
	
	.title-bkg {
		width: 100%;
		right: 0;
		left: 0;
		top: 45%;
		background-size: 480px;
	}

	.title-image {
		right: 0;
		left: 0;
		bottom: 75%;
	}

	.title-type {
		left: 0;
		right: 0;
		top: 45%;
	}

	.instructions {
		left: 0;
		right: 0;
		top: 50%;
	}

	.start {
		left: 0;
		right: 0;
		top: 90%;
	}
}

/*
___________________________________________________
STYLING FOR DESKTOP */

@media screen and (min-width: 480px) and (min-height: 480px) {

	.container {
		right: 0;
		left: 0;
		bottom: 12%;
		width: 600px;
		height: 600px;
		transition: all 0.3s ease;
	}

	.overlay-image {
		margin: 0;
		width: 300px;
		height: 300px;
	}

	.popup {
		font-size: 1.2em;
		background-size: 600px;
	}

	.title-container {
		width: 700px;
		height: 600px;
	}

	.title-bkg {
		width: 650px;
		height: 470px;
		right: 90px;
		top: 40px;
		background-size: 650px;
	}

	.title-image {
		width: 195px;
		height: 380px;
	}

	.title-type {
		width: 480px;
		height: 60px;
		left: 30px;
	}

	.instructions {
		font-size: 1.05em;
		top: 60px;
		left: 0;
		right: 145px;
		letter-spacing: 0.07em;
	}

	.start {
		font-size: 1.5em;
		top: 240px;
		left: 0;
		right: 145px;
	}
}

@media screen and (min-width: 1367px) {
		.control-pad {
		visibility: hidden;
		}
}

